OCaml extraction test

--- a/MatrixComparison/src/Matrix/OCamlExtractionComparison/README
+++ b/MatrixComparison/src/Matrix/OCamlExtractionComparison/README
@@ -1,3 +1,12 @@
+对Coq中矩阵模型的OCaml程序抽取测试
+
+一、介绍
+1. 从Coq的矩阵模型生成ocaml程序
+2. 增加了 test.ml 这些辅助程序，以便测试
+3. 主要目的是，使用10^3, 10^4, 10^5 维数的矩阵做测试，
+   包括矩阵乘法等运算，观察空间和时间占用情况。
+
+二、编译问题
 1. 抽取的 matrix.ml 文件，编译时出错（但REPL时没有错误）
 a. 将 ml 文件中的 R_abst, R_repr 手动修改为 __
 module type RbaseSymbolsSig =
@@ -37,6 +46,5 @@ l2m 函数的类型错误问题 (single_compile 目录的原因）
 解决：
 暂时放在同一个文件中，可以解决。
 备注：
-这是临时版本，内容不全。因该文件大部分是自动生成，而且需要手动改动，
-所以还是要想办法找到该问题。
-如何在多态时，能够在Coq和OCaml中不出现错误。
+1. 请使用 make_manually.sh 脚本来编译。
+2. 如何在多态时，能够在Coq和OCaml中不出现错误，这是以后要解决的问题。
