--- a/Readme
+++ b/Readme
@@ -2,6 +2,12 @@ Copyright 2022 ZhengPu Shi
   This file is part of coq-matrix. It is distributed under the MIT
   "expat license". You should have recieved a LICENSE file with it.
 
+
+
+**Note** : Now, this project is pinned, and a new version named CoqMatrix is located in https://github.com/zhengpushi/CoqMatrix . If you are still interested, please go to the project.
+
+
+
 1. Introduction
 Integration of Multiple Formal Matrix in Coq.
 The project is called : coq-matrix
